--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
-vendor/** linguist-detectable=false 
-*.json linguist-detectable=false 
-*.txt linguist-detectable=false 
-*.lock linguist-detectable=false 
-static/font-awesome linguist-detectable=false  
+vendor/** linguist-vendored
+*.json linguist-vendored 
+*.txt linguist-vendored
+*.lock linguist-vendored
+static/font-awesome linguist-vendored  
